--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
 
+    // TODO バージョン情報を変更する
     defaultConfig {
         applicationId "com.example.MapApplication"
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "Version 1.0"
     }
 
     buildTypes {
