--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -61,6 +64,21 @@
         <activity
             android:name=".SelectRankingActivity"
             android:label="@string/title_activity_select_ranking" >
+        </activity>
+        <activity
+            android:name=".UserInformationUpdateActivity"
+            android:label="@string/title_activity_user_information_update"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".UserEmailUpdateActivity"
+            android:label="@string/title_activity_user_email_update"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".UserPasswordUpdateActivity"
+            android:label="@string/title_activity_user_password_update"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
