--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    packagingOptions {
+        exclude('META-INF/DEPENDENCIES')
+        exclude('META-INF/NOTICE')
+        exclude('META-INF/LICENSE')
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:design:23.1.0'
+    compile files('libs/httpclient-4.5.1.jar')
+    compile files('libs/httpcore-4.3.1.jar')
+    compile files('libs/httpmime-4.3.1.jar')
 }
