--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.MapApplication"
     android:versionCode="1"
-    android:versionName="0.1" >
+    android:versionName="0.1">
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -26,7 +26,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
         <!-- TODO GoogleMapAPIを設定する -->
         <meta-data
@@ -40,7 +40,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,39 +49,35 @@
         </activity>
         <activity
             android:name=".MapTestActivity"
-            android:label="@string/title_activity_map_test" >
-        </activity>
+            android:label="@string/title_activity_map_test"></activity>
         <activity
             android:name=".AddPlaceActivity"
-            android:label="@string/title_activity_add_place" >
-        </activity>
+            android:label="@string/title_activity_add_place"></activity>
         <activity
             android:name=".DisplayDetailActivity"
-            android:label="@string/title_activity_display_detail" >
-        </activity>
+            android:label="@string/title_activity_display_detail"></activity>
         <activity
             android:name=".UserRegistActivity"
-            android:label="@string/title_activity_user_regist" >
-        </activity>
+            android:label="@string/title_activity_user_regist"></activity>
         <activity
             android:name=".SelectRankingActivity"
-            android:label="@string/title_activity_select_ranking" >
-        </activity>
+            android:label="@string/title_activity_select_ranking"></activity>
         <activity
             android:name=".UserInformationUpdateActivity"
             android:label="@string/title_activity_user_information_update"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".UserEmailUpdateActivity"
             android:label="@string/title_activity_user_email_update"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".UserPasswordUpdateActivity"
             android:label="@string/title_activity_user_password_update"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".AddTravelWordActivity"
+            android:label="@string/title_activity_add_travel_word"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
