--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -85,6 +86,16 @@
         <activity
             android:name=".RatingActivity"
             android:label="@string/title_activity_rating"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".RatingMenuActivity"
+            android:label="@string/title_activity_rating_menu"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".RatingWatchActivity"
+            android:label="@string/title_activity_rating_watch"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
